# sillok

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  NOTICE  README.ko.md  README.md  SECURITY.md  STATUS.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  eval.yml  publish.yml  status-drift.yml
adr/: 0001-initial-architecture-decisions.md
benchmark/results/: README.md
docs/: index.md
docs/api/: index.md
docs/architecture/: README.md  coverage-vs-aipm-vault.md  framework-coverage.md  frontmatter-compatibility.md  proposal-only-governance.md
docs/benchmarks/: index.md
docs/contributing/: extending-with-your-domain.md
docs/eval/: probe-set.md
docs/governance/: index.md
docs/integrations/: mcp-quickstart.md
docs/modules/: index.md
docs/recipes/: decide-reusability-with-yeonryun.md  index.md  search-vault-with-bongsu.md
docs/tutorials/: index.md
examples/: claude-code-mcp-config.json  cursor-mcp-config.json  telemetry-sample.jsonl
integrations/claude-code/: README.md
integrations/langfuse/: README.md
integrations/llm-wiki/: README.md
integrations/obsidian-vault/: README.md
integrations/promptfoo/: README.md
mcp_server/: README.md
packs/: registry.yaml
packs/consulting/: consulting-ai-engineering-audit.md  consulting-crossanalysis.md  consulting-growth-audit.md  consulting-saas-audit.md  consulting-security-audit.md  consulting-strategy-audit.md  consulting-uxui-audit.md  tool-adoption-consulting.md
packs/core/: README.md
packs/methodology/: agent-1on1.md  change-management.md  everyday-health-symptom.md  governance-standards.md  itil-operations.md  meeting-minutes.md  pack-maintenance.md  pm-enhanced.md  portfolio-governance.md  prompt-sequencing-meta.md  report-quality.md  risk-uncertainty.md  safe-agile-delivery.md
packs/output-styles/: exec-communication.md  infographic-design.md  project-charter.md  worklog.md
proposals/: .gitkeep
scripts/: check-status-drift.py  release.sh
sillok/: __init__.py
sillok/bongsu/: README.md  __init__.py  _common.py  post_update.py  search.py
sillok/cli/: __init__.py
sillok/eval/: __init__.py  __main__.py  calibration.py  probe_seeder.py  runner.py  triangulation.py
sillok/jikji/: README.md  __init__.py
sillok/naru/: README.md  __init__.py  action_layer.py  router_2tier.py
sillok/plugins/: __init__.py
sillok/pyeonchan/: __init__.py  ingest_md.py  watcher.py
sillok/sangso/: README.md  __init__.py  __main__.py  canary.py  gates.py  proposal.py
sillok/schemas/: README.md  __init__.py  __main__.py  _base.py  compression.py  overlay.py  pack.py  proposal.py  skills_v09.py  telemetry.py
sillok/telemetry/: __init__.py  gate.py
sillok/tongsa/: __init__.py  __main__.py  server.py  tools.py
(+36 files in other folders)
